<resources>
    <string name="app_name">Navigation_Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="DATOS">Datos</string>
    <string name="Formulario">Formulario</string>
    <string name="Mail">Mail</string>
    <string name="Tlf">Tlf</string>
    <string name="Name">Name</string>
    <string name="BtnNext">Next</string>
    <string name="BtnBack">Back</string>
</resources>